vote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: vote-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
      namespace: vote-app
  template:
    metadata:
      labels:
        app: vote
        namespace: vote-app
    spec:
      containers:
      - name: vote
        image: dockersamples/examplevotingapp_vote:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
            
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
